<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.AccountFragment">
    <ImageView
        android:id="@+id/scooter_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scooter_info_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="20dp"
        android:contentDescription="@string/pic_of_current_selected_scooter" />

    <TextView
        android:id="@+id/scooter_info_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/scooter_image"
        app:layout_constraintBottom_toTopOf="@id/camera_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="20dp"/>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scooter_info_panel"
        app:layout_constraintBottom_toTopOf="@id/click_scan_qr"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/click_scan_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scooter_info_panel"
        app:layout_constraintBottom_toTopOf="@id/click_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/unlock"
        android:textSize="25sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/click_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/click_scan_qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/start"
        android:textSize="25sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>